[gd_scene load_steps=22 format=3 uid="uid://dfsakfex6dkab"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_pab7c"]
[ext_resource type="Texture2D" uid="uid://bm0aamq5sgvma" path="res://Assets/enenmies.png" id="2_fhh1n"]
[ext_resource type="Script" path="res://Scripts/States/State Machine.gd" id="3_3snjx"]
[ext_resource type="Script" path="res://Scripts/States/EnemyIdle.gd" id="4_o3hk2"]
[ext_resource type="Script" path="res://Scripts/States/DogFollow.gd" id="5_ortqp"]
[ext_resource type="Script" path="res://Scripts/States/slashAttack.gd" id="6_m34a5"]
[ext_resource type="Script" path="res://Scripts/HealthManagers/DogHealthManager.gd" id="7_f8qm4"]
[ext_resource type="Texture2D" uid="uid://h4u0oxoh07we" path="res://Assets/Dps Particles.png" id="8_hj1jn"]
[ext_resource type="Texture2D" uid="uid://g00s7nv46m6x" path="res://Assets/2d_lights_and_shadows_neutral_point_light.webp" id="9_kvmpr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tyrwa"]
atlas = ExtResource("2_fhh1n")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_te2hf"]
atlas = ExtResource("2_fhh1n")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8hx5"]
atlas = ExtResource("2_fhh1n")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tq02r"]
atlas = ExtResource("2_fhh1n")
region = Rect2(0, 0, 100, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_spxwg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyrwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te2hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8hx5")
}],
"loop": true,
"name": &"Run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tq02r")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_pr78t"]
radius = 7.2111

[sub_resource type="CircleShape2D" id="CircleShape2D_venon"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_p3kgg"]
atlas = ExtResource("8_hj1jn")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t2dt"]
atlas = ExtResource("8_hj1jn")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpplk"]
atlas = ExtResource("8_hj1jn")
region = Rect2(90, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8jsd"]
atlas = ExtResource("8_hj1jn")
region = Rect2(0, 0, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_4gbon"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3kgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t2dt")
}],
"loop": true,
"name": &"Fire",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpplk")
}],
"loop": true,
"name": &"Ice",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"Nothing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8jsd")
}],
"loop": true,
"name": &"Poison",
"speed": 5.0
}]

[node name="Enemy" type="CharacterBody2D" groups=["dog", "enemy"]]
collision_layer = 4159
collision_mask = 4129
script = ExtResource("1_pab7c")

[node name="Animator" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.375, 0.375)
sprite_frames = SubResource("SpriteFrames_spxwg")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.90914

[node name="Lights" type="Node2D" parent="Animator"]
scale = Vector2(0.213334, 0.213334)

[node name="PointLight2D3" type="PointLight2D" parent="Animator/Lights"]
position = Vector2(-175, -62.4999)
color = Color(0.787393, 0.00108674, 0.000595474, 1)
energy = 1.09
texture = ExtResource("9_kvmpr")
texture_scale = 0.1

[node name="PointLight2D2" type="PointLight2D" parent="Animator/Lights"]
position = Vector2(175, -49.9999)
rotation = 3.14159
scale = Vector2(7.99993, 7.99993)
color = Color(0.787393, 0.00108674, 0.000595474, 1)
energy = 1.09
texture = ExtResource("9_kvmpr")
texture_scale = 0.05

[node name="PointLight2D" type="PointLight2D" parent="Animator/Lights"]
position = Vector2(-125, -62.4999)
color = Color(0.787393, 0.00108674, 0.000595474, 1)
energy = 1.09
texture = ExtResource("9_kvmpr")
texture_scale = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["dog"]]
shape = SubResource("CircleShape2D_pr78t")

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_3snjx")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_o3hk2")
enemy = NodePath("../..")

[node name="Follow" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_ortqp")
enemy = NodePath("../..")

[node name="Slash" type="Node" parent="State Machine" node_paths=PackedStringArray("dogEnemy")]
script = ExtResource("6_m34a5")
dogEnemy = NodePath("../..")

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCastSouthEast" type="RayCast2D" parent="Raycasts"]
rotation = -0.785398
target_position = Vector2(0, 40)
collision_mask = 4097

[node name="RayCastNorthEast" type="RayCast2D" parent="Raycasts"]
rotation = -2.35619
target_position = Vector2(0, 40)
collision_mask = 4097

[node name="RayCastNorthWest" type="RayCast2D" parent="Raycasts"]
rotation = 2.35619
target_position = Vector2(0, 40)
collision_mask = 4097

[node name="RayCastSouthWest" type="RayCast2D" parent="Raycasts"]
rotation = 0.785398
target_position = Vector2(0, 40)
collision_mask = 4097

[node name="RayCastWest" type="RayCast2D" parent="Raycasts"]
rotation = 1.5708
target_position = Vector2(0, 40)
collision_mask = 4097

[node name="RayCastSouth" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, 40)
collision_mask = 4097

[node name="RayCastEast" type="RayCast2D" parent="Raycasts"]
rotation = -1.5708
target_position = Vector2(0, 40)
collision_mask = 4097

[node name="RayCastNorth" type="RayCast2D" parent="Raycasts"]
rotation = 3.14159
target_position = Vector2(0, 40)
collision_mask = 4097

[node name="DogHealthManager" type="Node2D" parent="." node_paths=PackedStringArray("dogEnemy")]
script = ExtResource("7_f8qm4")
dogEnemy = NodePath("..")

[node name="Area2D" type="Area2D" parent="DogHealthManager" groups=["dog"]]
collision_layer = 64
collision_mask = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="DogHealthManager/Area2D"]
shape = SubResource("CircleShape2D_venon")

[node name="DpsParticles" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 3)
sprite_frames = SubResource("SpriteFrames_4gbon")
animation = &"Nothing"

[connection signal="area_entered" from="DogHealthManager/Area2D" to="DogHealthManager" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="DogHealthManager/Area2D" to="DogHealthManager" method="_on_area_2d_area_exited"]
